[Same Binary Tree] solve